Dev/impliment/src/objects/JiraTestObj1__c.object
<CustomObject>
    <description>Test</description>
    <fields>
        <fullName>FinalTestField1__c</fullName>
        <label>FinalTestField1</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>JiraRameshtest1__c</fullName>
        <label>JiraRameshtest1</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>NiruField1__c</fullName>
        <description>Test</description>
        <label>NiruField1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>testjira1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Build</label>
        <referenceTo>agf__ADM_Build__c</referenceTo>
        <relationshipLabel>JiraTestObj1s</relationshipLabel>
        <relationshipName>JiraTestObj1s</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>JiraTestObj1</label>
    <nameField>
        <label>JiraTestObj1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>JiraTestObj1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>